[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/fonts/consolas_20.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/icons/menu/error.svg" type="Texture" id=2]
[ext_resource path="res://scripts/gui/controls/error_panel.gd" type="Script" id=4]

[node name="ErrorPanel" type="PanelContainer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -54.0
margin_right = 54.0
margin_bottom = 32.0
grow_horizontal = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 104.0
margin_bottom = 28.0
grow_horizontal = 2

[node name="Icon1" type="TextureRect" parent="HBoxContainer"]
margin_right = 24.0
margin_bottom = 24.0
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="HBoxContainer"]
margin_left = 28.0
margin_top = 3.0
margin_right = 72.0
margin_bottom = 24.0
grow_horizontal = 2
size_flags_vertical = 8
custom_fonts/font = ExtResource( 1 )
text = "Test"
align = 1
valign = 1

[node name="Icon2" type="TextureRect" parent="HBoxContainer"]
margin_left = 76.0
margin_right = 100.0
margin_bottom = 24.0
texture = ExtResource( 2 )
